Fix alignment issues

--- a/style.css
+++ b/style.css
@@ -105,21 +105,20 @@ html {
 /* Mulberry infobox */
 #informationBox {
     border-color: #A93434;
-    background-color: rgba(171, 179, 57, 0.245); /*rgba(81, 23, 23, 0.245)*/
+    background-color: rgba(171, 179, 57, 0.245);
 }
 #informationBox #infoIcon {
-    color: #9b1e1e; /*#c7b93a*/
+    color: #9b1e1e;
 }
-#informationBox div:first-of-type {
+#informationBox #ex1 {
     margin-bottom: 0.5rem;
 }
-#informationBox div:nth-of-type(2) {
+#informationBox #ex2 {
     margin-bottom: 2.5rem;
 }
 #informationBoxImages {
     display: flex;
     justify-content: center;
-    align-items: center;
     margin-top: 60px;
 
     flex-direction: row;
@@ -149,7 +148,7 @@ html {
 /* Oldies infobox */
 #oldiesBox {
     border-color: #26c47f;
-    background-color: rgba(105, 204, 163, 0.245); /*rgba(81, 23, 23, 0.245)*/
+    background-color: rgba(105, 204, 163, 0.245);
 }
 #oldiesBox #oldiesIcon {
     color: #24a969;
